--- a/Baza/Baza.html
+++ b/Baza/Baza.html
@@ -157,8 +157,8 @@
             В треугольнике ABC AC=BC, высота CH равна 4. Найдите AC.
           </div>
           <div class="Task7PNG">
-            <img src="ExamTasksPngs/Task12.png" />
-            л<img src="ExamTasksPngs/Task12Triangle.png" />
+            <img src="ExamTasksPngs/Task12.png" width="300px" />
+            <img src="ExamTasksPngs/Task12Triangle.png" />
           </div>
           <button onclick="showModal12()" class="task4BTN">Ввести ответ</button>
         </div>
