--- a/Baza/Baza.html
+++ b/Baza/Baza.html
@@ -165,37 +165,70 @@
 
         <button class="accordion">Задание 13</button>
         <div class="panel">
-          <div class="text"></div>
+          <div class="text">
+            Стороны основания правильной шестиугольной пирамиды равны 14,
+            боковые рёбра равны 25. Найдите площадь боковой поверхности этой
+            пирамиды.
+          </div>
+          <div class="Task2PNG">
+            <img src="ExamTasksPngs/Task13.png" />
+          </div>
           <button onclick="showModal13()" class="task4BTN">Ввести ответ</button>
         </div>
 
         <button class="accordion">Задание 14</button>
         <div class="panel">
-          <div class="text"></div>
+          <div class="text">
+            Найдите значение выражения:<img
+              src="ExamTasksPngs/Task14.png"
+              width="200px"
+            />
+          </div>
           <button onclick="showModal14()" class="task4BTN">Ввести ответ</button>
         </div>
 
         <button class="accordion">Задание 15</button>
         <div class="panel">
-          <div class="text"></div>
+          <div class="text">
+            В магазине вся мебель продаётся в разобранном виде. Покупатель может
+            заказать сборку мебели на дому, стоимость которой составляет 10% от
+            стоимости купленной мебели. Шкаф стоит 37 000 рублей. Во сколько
+            рублей обойдётся покупка этого шкафа вместе со сборкой?
+          </div>
           <button onclick="showModal15()" class="task4BTN">Ввести ответ</button>
         </div>
 
         <button class="accordion">Задание 16</button>
         <div class="panel">
-          <div class="text"></div>
+          <div class="text">
+            Найдите значение выражения:<img
+              src="ExamTasksPngs/Task16.png"
+              width="200px"
+            />
+          </div>
           <button onclick="showModal16()" class="task4BTN">Ввести ответ</button>
         </div>
 
         <button class="accordion">Задание 17</button>
         <div class="panel">
-          <div class="text"></div>
+          <div class="text">
+            Найдите корень уравнения:<img src="ExamTasksPngs/Task17.png" />
+          </div>
           <button onclick="showModal17()" class="task4BTN">Ввести ответ</button>
         </div>
 
         <button class="accordion">Задание 18</button>
-        <div class="panel">
-          <div class="text"></div>
+        <div class="panel18">
+          <div class="text">
+            На координатной прямой отмечены точки A, B, C, и D. Про число m
+            известно, что оно равно корень из 2<br />
+            Установите соответствие между указанными точками и числами из
+            правого столбца, которые им соответствуют.<br />
+            <div class="Task18PNG">
+              <img src="ExamTasksPngs/Task18.png" />
+              <img src="ExamTasksPngs/Task18KOEF.png" />
+            </div>
+          </div>
           <button onclick="showModal18()" class="task4BTN">Ввести ответ</button>
         </div>
 
