--- a/index.html
+++ b/index.html
@@ -11,84 +11,28 @@
 <body>
   <section class="header">
     <div class="header-block">
-      <H1>НАЗВАНИЕ </H1>
+      <H1>100МАТ </H1>
     </div>
   </section>
   <section class="main">
     <div class="main-card">
-      <p>Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова Слова
-        Слова Слова Слова СловаСлова Слова Слова Слова
-        Слова Слова Слова Слова
-      </p>
+      <p>Добро пожаловать на 100МАТ — твой персональный помощник в подготовке к ЕГЭ по математике!</p>
+      <br>
+        <p>Здесь ты сможешь:</p><br>
+        <p>✅ Решать задания любого уровня сложности — от базового до профильного.</p><br>
+        <p>✅ Тренироваться в условиях, близких к реальному экзамену, с автоматической проверкой.<br>
+        
+        
+        <br><p>100 баллов — это реально!</p><br>
+        <p>Начни прямо сейчас и преврати стресс в уверенность, а ошибки — в новые знания.</p>
     </div>
   </section>
   <section class="navigation">
     <div class="btns">
       <btn class="btn">
-        <a href="Baza/Baza.html">Базовая <br> математика</a>
+        <a href="Baza/Baza.html">Базовая математика</a>
     </div>
-    <div class="btn2">
+    <btn class="btn">
       <a href="Prof/prof.html">Профильная математика</a>
     </div>
     </div>
