Переделаны ответы базы

--- a/FinalProject/Baza/Baza.html
+++ b/FinalProject/Baza/Baza.html
@@ -234,7 +234,11 @@
 
         <button class="accordion">Задание 19</button>
         <div class="panel">
-          <div class="text"></div>
+          <div class="text">
+            Найдите шестизначное натуральное число, которое записывается только
+            цифрами 2 и 0 и делится на 24. В ответе укажите какое-нибудь одно
+            такое число
+          </div>
           <button onclick="showModal19()" class="task4BTN">Ввести ответ</button>
         </div>
 
