--- a/FinalProject/Baza/Baza.html
+++ b/FinalProject/Baza/Baza.html
@@ -9,6 +9,7 @@
   <body>
     <section class="header">
       <div class="header-block"><h1>Базовая Математика</h1></div>
+      <button onclick="initTimer()">запустить таймер</button>
     </section>
     <section class="mainOtherHTML">
       <div class="tasks">
@@ -264,6 +265,8 @@
         </div>
       </div>
     </footer>
+    <div id="timer" />
     <script src="../script.js"></script>
+    <script src="../timer.js"></script>
   </body>
 </html>
