поменял таймер в базе и доделал ответы к заданиям базе

--- a/FinalProject/Baza/Baza.html
+++ b/FinalProject/Baza/Baza.html
@@ -257,16 +257,21 @@
       </div>
     </section>
     <footer>
-      <button id="show_result" onclick="displayQuestionState()">Показать результат</button>
+      <button id="show_result" onclick="displayQuestionState()">
+        Показать результат
+      </button>
       <div id="quest_state_block">
-        <div>Вы ответили правильно на <span id="correct_answer_count"></span> из <span id="all_quest_count"></span></div>
+        <div>
+          Вы ответили правильно на <span id="correct_answer_count"></span> из
+          <span id="all_quest_count"></span>
+        </div>
         <div>
           <button onclick="dropQuestionState()">Попробовать еще раз</button>
         </div>
       </div>
     </footer>
     <div id="timer" />
-    <script src="../script.js"></script>
+    <script src="../scriptBaza.js"></script>
     <script src="../timer.js"></script>
   </body>
 </html>
