--- a/FinalProject/Prof/prof.html
+++ b/FinalProject/Prof/prof.html
@@ -9,6 +9,7 @@
   <body>
     <section class="header">
       <div class="header-block"><h1>Профильная Математика</h1></div>
+      <button onclick="initTimer()">запустить таймер</button>
     </section>
     <section class="mainOtherHTML">
       <div class="tasks">
@@ -102,6 +103,7 @@
         </div>
       </div>
     </section>
-    <script src="../script.js"></script>
+    <script src="/scriptProf.js"></script>
+    <script src="/timerProf.js"></script>
   </body>
 </html>
