Почти доделал профиль, осталась логика

--- a/FinalProject/Baza/Baza.html
+++ b/FinalProject/Baza/Baza.html
@@ -245,13 +245,23 @@
 
         <button class="accordion">Задание 20</button>
         <div class="panel">
-          <div class="text"></div>
+          <div class="text">
+            Баржа в 10:00 вышла из пункта А в пункт В, расположенный в 30 км от
+            А. Пробыв в пункте В 1 час 30 минут, баржа отправилась назад и
+            вернулась в пункт А в 22:00 того же дня. Определите (в км/ч)
+            собственную скорость баржи, если известно, что скорость течения реки
+            3км/ч.
+          </div>
           <button onclick="showModal20()" class="task4BTN">Ввести ответ</button>
         </div>
 
         <button class="accordion">Задание 21</button>
         <div class="panel">
-          <div class="text"></div>
+          <div class="text">
+            В корзине лежит 50 грибов: рыжики и грузди. Известно, что среди
+            любых 28 грибов имеется хотя бы один рыжик, а среди любых 24 грибов
+            хотя бы один груздь. Сколько груздей в корзине?
+          </div>
           <button onclick="showModal21()" class="task4BTN">Ввести ответ</button>
         </div>
       </div>
@@ -272,6 +282,6 @@
     </footer>
     <div id="timer" />
     <script src="../scriptBaza.js"></script>
-    <script src="../timer.js"></script>
+    <script src="../timerBaza.js"></script>
   </body>
 </html>
