Доделать ответы к заданиям второй части

--- a/FinalProject/Prof/prof.html
+++ b/FinalProject/Prof/prof.html
@@ -59,7 +59,7 @@
           Выстрелы повторяются до тех пор, пока цель не будет уничтожена.
           Вероятность уничтожения некоторой цели при первом выстреле равна 0,4,
           а при каждом последующем — 0,6. Сколько выстрелов потребуется для
-          того, чтобы вероятность уничтожения цели была не менее 0,98?   В
+          того, чтобы вероятность уничтожения цели была не менее 0,98? <br />В
           ответе укажите наименьшее необходимое количество выстрелов.
         </div>
         <button onclick="showModal5()" class="task4BTN">Ввести ответ</button>
@@ -156,6 +156,10 @@
         <div class="Task2PNG">
           <img src="examTasksProf/task13.svg" width="300px" />
         </div>
+        <div class="text">
+          Ответ введите через ";". Для указания пересечения используйте знак "U"
+          , "π" и "∈"
+        </div>
         <button onclick="showModal13()" class="task4BTN">Ввести ответ</button>
       </div>
 
@@ -168,6 +172,7 @@
           а)  Докажите, что B1K : KC1  ="  2 : 1.<br" /> б)  Найдите площадь
           сечения параллелепипеда ABCDA1B1C1D1 плоскостью APQ.<br />
         </div>
+        <div class="text">В ответе используйте знак "√"</div>
         <button onclick="showModal14()" class="task4BTN">Ввести ответ</button>
       </div>
 
@@ -177,6 +182,7 @@
         <div class="Task2PNG">
           <img src="examTasksProf/task15.svg" width="300px" />
         </div>
+        <div class="text">В ответе используйте знак "∞" и знак "U"</div>
         <button onclick="showModal15()" class="task4BTN">Ввести ответ</button>
       </div>
 
@@ -207,6 +213,7 @@
             если ∠ECD = 15°
           </div>
         </div>
+        <div class="text">В ответ указывайте только пункт Б</div>
         <button onclick="showModal17()" class="task4BTN">Ввести ответ</button>
       </div>
 
@@ -216,6 +223,7 @@
           Найдите все значения a, при каждом из которых наибольшее значение
           функции f(X) = |X - a| - X^2 не меньше 1
         </div>
+        <div class="text">В ответе использейте знаки "U" и "∞"</div>
         <button onclick="showModal18()" class="task4BTN">Ввести ответ</button>
       </div>
 
